# homeip-sharp

./: Makefile.am  configure.ac
debian/: changelog  control  copyright  homeip-sharp.install.in  rules
homeip-sharp/: AppSettings.cs  HomeIP.cs  Makefile.am  homeip-sharp.desktop  prefs.glade
